@@ -1,0 +1,15 @@
+
+
+namespace Pianist
+{
+	public class FingeringNavigator
+	{
+		NotationTrack Track;
+
+		Fingering run()
+		{
+			// TODO:
+			return new Fingering();
+		}
+	};
+}
