@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: fa6908aedb3d2c546821ed590bc24939
+timeCreated: 1504515345
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
