@@ -1,23 +1,42 @@
 
+using System.Collections.Generic;
+
 
 namespace Pianist
 {
 	public class Note
 	{
-		int pitch;
+		public int pitch;
 
-		int tick;
+		public int tick;
 
-		float start;
-		float duration;
+		public float start;
+		public float duration;
 
-		Finger finger = Finger.EMPTY;
+		public Finger finger = Finger.EMPTY;
 	};
 
 	public class NotationTrack
 	{
 		Note[] notes;
 
-		static NotationTrack merge(NotationTrack[] tracks);
+		public static NotationTrack merge(NotationTrack[] tracks)
+		{
+			Dictionary<int, Note> noteMap = new Dictionary<int, Note>();
+
+			foreach(NotationTrack track in tracks)
+			{
+				foreach(Note note in track.notes)
+				{
+					if(!noteMap.ContainsKey(note.tick) || note.duration < noteMap[note.tick].duration)
+						noteMap[note.tick] = note;
+				}
+			}
+
+			Note[] notes = new Note[noteMap.Count];
+			noteMap.Values.CopyTo(notes, noteMap.Count);
+
+			return new NotationTrack{notes = notes};
+		}
 	};
 }
