@@ -7,6 +7,8 @@ TODO:
 
 2017.9.4	K.L.	<k.l.lambda@gmail.com>
 
+	+	Pianist/FingeringNavigator.cs: created.
+
 	+	Pianist/Fingering.cs: created.
 	+	Pianist/Notation.cs: created.
 
